handled default value

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ $(document).ready(function() {
           "id": "username",
           "name": "User Name",
           "type": "string", 
+          "value": "user1", 
           "meta": 
           {
             "min": 4,
