added support for hidden value

--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@ $(document).ready(function() {
           "name": "Password",
           "type": "password",
           "meta": []
+        },
+        {
+          "id": "id",
+          "name": "id",
+          "type": "hidden",
+          "value": "123"
         }
       ]
     });
