--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@ $(document).ready(function() {
             "max": 64,
             "unique": "users"
           }
+        },
+        {
+          "id": "price",
+          "name": "Price",
+          "type": "currency", 
+          "meta": 
+          {
+          }
         }
       ]
     }, []);
