added support for textarea

--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@ $(document).ready(function() {
           }
         },
         {
+          "id": "description",
+          "name": "Description",
+          "type": "text", 
+          "meta": 
+          {
+          }
+        },
+        {
           "id": "price",
           "name": "Price",
           "type": "currency", 
