added sample code

--- a/index.html
+++ b/index.html
@@ -79,6 +79,53 @@
                 <div class="box">
                     <div id="form1"></div>
                 </div>
+                <div class="box">
+                  <pre>
+  var options = [];
+  var formBuilder = new FormBuilder('post', '#action', 'Add', '#form1', 
+    {  
+      "name": "User",
+      "attrs": [
+        {
+          "id": "username",
+          "name": "User Name",
+          "type": "string", 
+          "value": "user1", 
+          "meta": 
+          {
+            "min": 4,
+            "max": 64,
+            "unique": "users"
+          }
+        },
+        {
+          "id": "email",
+          "name": "Email",
+          "type": "email",
+          "meta": 
+          {
+            "min": 4,
+            "max": 128,
+            "unique": "users"
+          }
+        },
+        {
+          "id": "password",
+          "name": "Password",
+          "type": "password",
+          "meta": []
+        },
+        {
+          "id": "id",
+          "name": "id",
+          "type": "hidden",
+          "value": "123"
+        }
+      ]
+    }, []);
+  formBuilder.build();
+                  </pre>
+                </div>
             </div>
         </div>
 
@@ -87,6 +134,45 @@
             <div class="col-xs-12">
                 <div class="box">
                     <div id="form2"></div>
+                </div>
+                <div class="box">
+                    <pre>
+  var options = [];
+  var formBuilder = new FormBuilder('post', '#action', 'Add', '#form2', 
+    {  
+      "name": "Product",
+      "attrs": [
+        {
+          "id": "id",
+          "name": "Product Id",
+          "type": "string", 
+          "meta": 
+          {
+            "min": 4,
+            "max": 64,
+            "unique": "users"
+          }
+        },
+        {
+          "id": "description",
+          "name": "Description",
+          "type": "text", 
+          "meta": 
+          {
+          }
+        },
+        {
+          "id": "price",
+          "name": "Price",
+          "type": "currency", 
+          "meta": 
+          {
+          }
+        }
+      ]
+    }, []);
+  formBuilder.build();
+                    </pre>
                 </div>
             </div>
         </div>
