--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">NAVIGATION</li>
         <li class="active"><a href="index.html"><i class="fa fa-book"></i> <span>Examples</span></a></li>
-        <li><a href="usage.html"><i class="fa fa-gear"></i> <span>Usage</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -94,7 +93,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.min.js"></script>
-<script src="../dist/jquery-jsonform.js"></script>
+<script src="dist/jquery-jsonform.js"></script>
 <script>
 $(document).ready(function() {
   var options = {
