--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <script>
 $(document).ready(function() {
   var options = {
-    method: 'post',
+    method: 'get',
     action: '#action',
     buttonLabel: 'Add'
   };
