--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.min.js"></script>
-<script src="dist/jquery-jsonform.js"></script>
-<link rel="stylesheet" href="dist/jquery-jsonform.css">
+<script src="src/jquery-jsonform.js"></script>
+<link rel="stylesheet" href="src/jquery-jsonform.css">
 <script>
 $(document).ready(function() {
   var options = {
